# llm-candidate-rag-benchmark-multilang

./: .gitignore  README.md  llm-candidate-rag-benchmark-multilang - master.sln  pyproject.toml
benchmarks/: ARCHITECTURE.md  CLEAN_CODE_REFINEMENT.md  CODE_COMPARISON.md  DELIVERABLES.md  DIAGRAMS.md  INDEX.md  README.md  REFACTORING_SUMMARY.md  llm-judge-evaluator.py  quality-prompts.json  run-benchmarks.ps1  run-benchmarks.sh  run_evaluation.py
benchmarks/evaluator/: README.md  config.py  http_client.py  judge.py  scoring.py
benchmarks/k6/: load-test.js  smoke-test.js  stress-test.js
benchmarks/results/: benchmark-comparison.md  evaluation_report.md
config/: common.yaml  evaluation.yaml
data/input/: CVJeronimoGarcia.json  DonaldoOruciCV.json  Gorosito.json  Jan Claudiu Crisan CV EN.json  MauroGioberti_ATS.json  Natalia_Gutierrez_QA_Tester.json  README.md
data/instructions/: embeddings.jsonl  embedings.jsonl  llm.jsonl
data/prompts/: chat_human.md  chat_system.md  evaluation_judge.md
data/schema/: ai_resume_result.schema.json  candidate_record.schema.json
infra/docker/: docker-compose.ollama.yml  docker-compose.qdrant.yml
services/embeddings-python/: config_loader.py  embedding_server.py  embeddings_server.py  embeddings_utils.py  run_server.py
services/embeddings_python/: embeddings_api.py  serve.py
src/dotnet/: Data.csproj  Rag.Candidates.Api.csproj  Rag.Candidates.SemanticKernel.sln  Semantic.Kernel.Api.csproj
src/dotnet/Api/: Program.cs
src/python/: run_langchain_api.py
tests/: README.md  run-tests.ps1  run-tests.sh
(+208 files in other folders)
